# CreditIQ-AI

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
ai-engine/: README.md  pyproject.toml
ai-engine/config/: base.yaml
ai-engine/config/environments/: development.yaml  production.yaml  testing.yaml
ai-engine/creditiq_ai/: __init__.py  smoke_test.py
ai-engine/creditiq_ai/config/: __init__.py  loader.py  models.py
ai-engine/creditiq_ai/constants/: __init__.py
ai-engine/creditiq_ai/core/: __init__.py  base.py  enums.py  exceptions.py  logging.py  schemas.py  types.py
ai-engine/creditiq_ai/credit_intelligence/: __init__.py
ai-engine/creditiq_ai/data/: __init__.py  dtypes.py  loaders.py  profiling.py  quality.py  registry.py
ai-engine/creditiq_ai/decision/: __init__.py  credit_score.py  engine.py  models.py  policy.py
ai-engine/creditiq_ai/evaluation/: __init__.py
ai-engine/creditiq_ai/exceptions/: __init__.py  base.py
ai-engine/creditiq_ai/explainability/: __init__.py
ai-engine/creditiq_ai/feature_engineering/: __init__.py  generators.py  pipeline.py  registry.py
ai-engine/creditiq_ai/fraud/: __init__.py
ai-engine/creditiq_ai/fraud_intelligence/: __init__.py
ai-engine/creditiq_ai/inference/: __init__.py  engine.py  models.py  validator.py
ai-engine/creditiq_ai/logging/: __init__.py  logger.py
ai-engine/creditiq_ai/model_operations/: __init__.py  domain.py
ai-engine/creditiq_ai/models/: __init__.py
ai-engine/creditiq_ai/monitoring/: __init__.py
ai-engine/creditiq_ai/pipelines/: __init__.py
ai-engine/creditiq_ai/preprocessing/: __init__.py  encoding.py  outliers.py  pipeline.py  scaling.py  selection.py  serialization.py
ai-engine/creditiq_ai/registry/: __init__.py
ai-engine/creditiq_ai/risk/: __init__.py
ai-engine/creditiq_ai/scoring/: __init__.py
ai-engine/creditiq_ai/training/: __init__.py
ai-engine/creditiq_ai/utils/: __init__.py  mathx.py  parsing.py
ai-engine/creditiq_ai/validation/: __init__.py  validators.py
ai-engine/docs/: ARCHITECTURE.md  FolderStructure.md
ai-engine/docs/audits/: integration_matrix.md  performance_review.md  quality_gate_results.md  security_privacy_review.md  sprint_8_5_audit.md  technical_debt_register.md
ai-engine/docs/credit_intelligence/: BusinessRulesAndConfidence.md  Evaluation.md  HyperparameterOptimization.md  ModelComparison.md  ModelTrainers.md  ProbabilityCalibration.md  TrainingFramework.md  TrainingOrchestration.md
ai-engine/docs/explainability/: CompleteXAI.md  XAIArchitecture.md
ai-engine/docs/fraud/: BehaviourIdentityAndRules.md  EnterpriseFraudPipeline.md  FraudArchitecture.md
ai-engine/docs/fraud_intelligence/: Architecture.md
ai-engine/docs/inference/: EnterpriseInference.md
ai-engine/docs/model_operations/: AdvancedMonitoring.md  Architecture.md  RegistryAndMonitoring.md
ai-engine/docs/preprocessing/: DataCleaning.md  DataQualityAndVersioning.md  MissingValues.md  TransformationEngines.md
ai-engine/tests/fixtures/: synthetic.py
ai-engine/tests/integration/: test_complete_xai.py  test_credit_training_orchestrator.py  test_enterprise_fraud_pipeline.py  test_enterprise_inference.py  test_model_ops_completion.py  test_platform_integration.py
ai-engine/tests/unit/: test_advanced_model_operations.py  test_artifact_integrity.py  test_cleaning.py  test_credit_evaluation.py  test_credit_rules_confidence.py  test_data_and_validation.py  test_data_quality_versioning.py  test_decision_engine.py  test_explainability.py  test_feature_engineering.py  test_foundations.py  test_fraud_behaviour_identity_rules.py  test_fraud_detection.py  test_fraud_scoring.py  test_hyperparameter_optimization.py  test_imputation.py  test_logging_and_exceptions.py  test_model_comparison.py  test_model_operations.py  test_monitoring.py  test_optional_trainers.py  test_preprocessing_engines.py  test_probability_calibration.py  test_training_framework.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  analytics.py  health.py  reports.py  router.py
backend/app/core/: config.py  data_scope.py  deps.py  exceptions.py  logging.py  rate_limit.py  request_context.py  security.py
backend/app/db/: all_models.py  base.py  bootstrap.py  session.py
backend/app/integrations/: ports.py  simulated.py
backend/migrations/: env.py
backend/tests/: test_analytics.py  test_api_key_security.py  test_applicant_profiles.py  test_audit_contracts.py  test_custom_roles.py  test_data_scope.py  test_documents.py  test_fraud_cases.py  test_loan_products.py  test_mfa.py  test_migrations.py  test_ml_client.py  test_ml_fallback.py  test_organization_schemas.py  test_platform_tenant_context.py  test_rate_limit.py  test_reports.py  test_request_context.py  test_role_assignment.py  test_security.py  test_servicing.py  test_transaction_ledger.py  test_user_lifecycle.py  test_workflow.py  test_workflow_policy.py
ml-engine/: Dockerfile  pyproject.toml
ml-engine/tests/: test_redis_monitor.py  test_redis_monitor_integration.py  test_serving.py
(+271 files in other folders)
