[tool.poetry]
name = "creditiq-ai"
version = "0.1.0"
description = "CreditIQ AI — production-grade credit-intelligence ML engine (risk, scoring, default, fraud, explainability)."
authors = ["CreditIQ AI Engineering"]
readme = "README.md"
packages = [{ include = "creditiq_ai" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.1"
pandas = "^2.2"
scikit-learn = "^1.5"
xgboost = "^2.1"
lightgbm = "^4.5"
catboost = "^1.2"
shap = "^0.46"
optuna = "^4.0"
mlflow = "^2.17"
pydantic = "^2.9"
pydantic-settings = "^2.5"
joblib = "^1.4"
pyyaml = "^6.0"
pyarrow = "^17.0"        # parquet support
openpyxl = "^3.1"        # excel support
loguru = "^0.7"          # enterprise logging

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.7"
black = "^24.10"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=creditiq_ai --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
