[tool.poetry]
name = "creditiq-ai"
version = "0.1.0"
description = "CreditIQ AI — production-grade credit-intelligence ML engine (risk, scoring, default, fraud, explainability)."
authors = ["CreditIQ AI Engineering"]
readme = "README.md"
packages = [{ include = "creditiq_ai" }]
include = [{ path = "config", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.1"
pandas = "^2.2"
scikit-learn = "^1.5"
xgboost = { version = "^2.1", optional = true }
lightgbm = { version = "^4.5", optional = true }
catboost = { version = "^1.2", optional = true }
shap = { version = ">=0.46,<0.53", optional = true }
optuna = "^4.0"
mlflow = { version = "^3.14", optional = true }
pydantic = "^2.9"
pydantic-settings = "^2.5"
joblib = "^1.4"
pyyaml = "^6.0"
pyarrow = "^23.0.1"      # parquet support; 23.0.1 fixes PYSEC-2026-113
openpyxl = "^3.1"        # excel support
loguru = "^0.7"          # enterprise logging

[tool.poetry.extras]
modeling = ["xgboost", "lightgbm", "catboost", "shap"]
mlops = ["mlflow"]
all = ["xgboost", "lightgbm", "catboost", "shap", "mlflow"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.7"
black = "^24.10"
mypy = "^1.13"
types-pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=creditiq_ai --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
