[project]
name = "creditiq-backend"
version = "0.1.0"
description = "CreditIQ AI — backend API (FastAPI modular monolith)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "redis>=5.1",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "postgres: requires a live PostgreSQL database with migrated CreditIQ schema",
]
