[project]
name = "creditiq-ml-engine"
version = "0.1.0"
description = "CreditIQ AI — ML engine (risk, credit score, default PD, fraud, SHAP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "shap>=0.46",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
